# avsRAG

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/: dependencies.py  document_processor.py  embedding_manager.py  main.py  prompt_logic.py  rag.py  vector_store.py
backend/src/routes/: prompts.py  uploads.py
cli/: run.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AppChat.css  FileUpload.tsx
frontend/src/components/: Toast.css  Toast.tsx  ToastBus.tsx
frontend/src/hooks/: useWebSocket.tsx
